# wasm-shim

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.server  MAINTAINERS.md  Makefile  README.md  RELEASE.md  build.rs  docker-compose.yaml  release.yaml
.cargo/: config.toml
.claude/commands/: bump-dev.md  minor-release.md  verify-examples.md
.github/: CODEOWNERS  release.yml
.github/actions/prepare-release/: action.yaml
.github/actions/setup-rust-wasm/: action.yaml
.github/workflows/: automated-release.yaml  build-image.yaml  build-server-image.yaml  e2e.yaml  license-scan.yaml  pre-release.yaml  release.yaml  rust.yaml  sector-release.yaml  tests.yaml  version-gate.yaml
crates/kuadrant-filter/: Cargo.toml  build.rs
crates/kuadrant-filter/src/: descriptor_manager.rs  lib.rs
crates/kuadrant-filter/src/configuration/: legacy_translation.rs
crates/kuadrant-filter/src/data/: cel.rs  grpc.rs  headers.rs  mod.rs
crates/kuadrant-filter/src/kuadrant/: cache.rs  context.rs  mod.rs
crates/kuadrant-filter/src/kuadrant/pipeline/: blueprint.rs  factory.rs  mod.rs
crates/kuadrant-filter/src/kuadrant/pipeline/tasks/: dynamic.rs  fail.rs  failure_mode.rs  headers.rs  send_reply.rs  tracing_decorator.rs
crates/kuadrant-filter/src/kuadrant/pipeline/tasks/token_usage/: event_parser.rs
crates/kuadrant-filter/src/kuadrant/resolver/: mock.rs  mod.rs
crates/kuadrant-filter/src/proto/: kuadrant.v1.rs
crates/kuadrant-filter/src/services/: dynamic.rs  mod.rs  tracing.rs
crates/kuadrant-filter/src/tracing/: mod.rs  processor.rs
crates/wasm-shim/: Cargo.toml  build.rs  remote_address.rs  response_body.rs  streaming.rs
crates/wasm-shim/src/: lib.rs  wasm_host.rs
crates/wasm-shim/src/filter/: kuadrant_filter.rs  root_context.rs
crates/wasm-shim/src/metrics/: mod.rs
crates/wasm-shim/src/tracing/: mod.rs
crates/wasm-shim/tests/: failuremode.rs  failures.rs  rate_limited.rs  response_body.rs
crates/wasm-shim/tests/util/: common.rs
crates/wasm-shim/util/: mod.rs
deploy/: Dockerfile  Makefile  authorino-simple-api.yaml  authorino.yaml  gateway-class.yaml  gateway.yaml  http-route.yaml  limitador.yaml  ratelimit.yaml  toystore.yaml  wasm_shim.wasm  wasmplugin.yaml
deploy/docker-compose/: envoy.yaml  limits.yaml
doc/: string-extensions.md
e2e/basic/: Makefile  README.md  docker-compose.yaml  envoy.yaml  limits.yaml
e2e/missing-cluster/: Makefile  README.md  envoy.yaml  limits.yaml
e2e/parallel-requests/: Makefile  README.md  envoy.yaml  run-parallel-requests.sh
e2e/remote-address/: Makefile  README.md  docker-compose.yaml  envoy.yaml  limits.yaml
e2e/unreachable-service/: Makefile  README.md  envoy.yaml  limits.yaml
examples/ratelimit/: README.md  docker-compose.yaml  envoy.yaml
examples/ratelimit_check_report/: README.md  docker-compose.yaml  envoy.yaml  limits.yaml
examples/request_body/: Makefile  README.md  docker-compose.yaml  envoy.yaml
examples/response_body/: README.md  docker-compose.yaml  envoy.yaml
examples/sse_streaming/: README.md  docker-compose.yaml  envoy.yaml  limits.yaml
make/: auth.mk  deploy.mk
releases/: kuadrant-ratelimit-wasm-v0.4.0-alpha.1  kuadrant-ratelimit-wasm-v0.4.0-alpha.2
server/: nginx.conf
src/: action_dispatcher.rs  action_set_index.rs  attribute.rs  auth_action.rs  configuration.rs  filter.rs  glob.rs  lib.rs  metrics.rs  operation_dispatcher.rs  policy.rs  policy_index.rs  property.rs  property_path.rs  ratelimit_action.rs  runtime_action.rs  runtime_action_set.rs  runtime_config.rs  service.rs  service_metrics.rs  typing.rs  utils.rs
src/configuration/: action.rs  action_set.rs  action_set_index.rs  legacy_translation.rs
src/data/: attribute.rs  cel.rs  mod.rs  property.rs
src/data/cel/: strings.rs
src/envoy/: address.rs  attribute_context.rs  authority.rs  backoff.rs  base.rs  config_source.rs  context_params.rs  custom_tag.rs  extension.rs  external_auth.rs  grpc_service.rs  http_status.rs  http_uri.rs  matcher.rs  metadata.rs  mod.rs  number.rs  percent.rs  properties.rs  proxy_protocol.rs  range.rs  ratelimit.rs  ratelimit_unit.rs  regex.rs  rls.rs  route_components.rs  semantic_version.rs  socket_option.rs  status.rs  string.rs  timestamp.rs  token_bucket.rs  value.rs
src/envoy_ext_auth/: address.rs  attribute_context.rs  backoff.rs  base.rs  context_params.rs  external_auth.rs  http_status.rs  http_uri.rs  mod.rs  percent.rs  semantic_version.rs  socket_option.rs  status.rs  timestamp.rs
src/filter/: descriptor_manager.rs  http_context.rs  kuadrant_filter.rs  mod.rs  operations.rs  proposal_context.rs  root_context.rs
src/filter/kuadrant_filter/: attribute_store.rs
src/kuadrant/: cache.rs  context.rs  mod.rs
src/kuadrant/pipeline/: blueprint.rs  executor.rs  factory.rs  mod.rs
src/kuadrant/resolver/: mock.rs  mod.rs  wasm_host.rs
src/metrics/: mod.rs
src/service/: auth.rs  grpc_message.rs  rate_limit.rs
src/services/: auth.rs  dynamic.rs  mod.rs  opentelemetry.rs  rate_limit.rs  tracing.rs
src/services/dynamic/: converters.rs
src/tracing/: exporter.rs  log_layer.rs  mod.rs  processor.rs  propagation.rs
src/v2/: mod.rs
src/v2/data/: attribute.rs  cel.rs  headers.rs  mod.rs
src/v2/filter/: kuadrant_filter.rs  root_context.rs
src/v2/kuadrant/: cache.rs  context.rs  mod.rs
src/v2/resolver/: mod.rs
src/v2/services/: auth.rs  mod.rs  rate_limit.rs
src/v2/tasks/: common.rs  mod.rs  ratelimit.rs
src/v2/temp/: mod.rs
tests/: auth.rs  dynamic.rs  failuremode.rs  failures.rs  grpc_authority.rs  multi.rs  rate_limited.rs  remote_address.rs  request_body.rs  request_body_transient_error.rs  request_data.rs  response_body.rs  sse.rs  streaming.rs
tests/util/: common.rs  data.rs
utils/deploy/: authconfig.yaml  envoy-notls.yaml  envoy-tls.yaml  envoy.yaml  limitador.yaml  limits.yaml
utils/docker-compose/: envoy-auth.yaml  envoy.template.yaml  envoy.yaml  limits.yaml
utils/kind/: cluster.yaml
utils/kustomize/authorino/: authorino.yaml  kustomization.yaml
utils/kustomize/authorino-operator/: kustomization.yaml
(+52 files in other folders)
