[package]
name = "wasm-shim"
version = "0.9.0-dev"
edition = "2021"
authors = ["Alex Snaps <asnaps@redhat.com>", "Eguzki Astiz Lezaun <eguzki@redhat.com>", "Didier Di Cesare <dcesare@redhat.com>", "Adam Cattermole <acatterm@redhat.com>", "Rahul Anand <rahulanand16nov@gmail.com>"]
description = "Wasm module connecting envoy and authorino/limitador"
license = "Apache-2.0"
keywords = ["rate-limiting", "rate", "limiter", "envoy", "rls"]
categories = ["web-programming"]
homepage = "https://kuadrant.io"
repository = "https://github.com/Kuadrant/wasm-shim"
documentation = "https://kuadrant.io"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[features]
default = ["with-serde"]
with-serde = ["protobuf/with-serde"]
debug-host-behaviour = []

[dependencies]
proxy-wasm = "0.2.1"
serde_json = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
prost = "0.11"
prost-types = "0.11"
protobuf = { version = "2.27", features = ["with-serde"] }
thiserror = "1.0"
regex = "1"
radix_trie = "0.2.1"
const_format = "0.2.31"
chrono = { version = "0.4.38", default-features = false, features = ["alloc", "std"] }
cel-interpreter = { git = "https://github.com/clarkmcc/cel-rust", rev = "5b02b08", features = ["json", "regex", "chrono"] }
cel-parser = { git = "https://github.com/clarkmcc/cel-rust", rev = "5b02b08" }
urlencoding = "2.1.3"

[dev-dependencies]
proxy-wasm-test-framework = { git = "https://github.com/Kuadrant/wasm-test-framework.git", branch = "kuadrant" }
serial_test = "2.0.0"

[build-dependencies]
protoc-rust = "2.27"
