[workspace]
members = ["crates/kuadrant-filter", "crates/wasm-shim"]
resolver = "2"

[workspace.lints.clippy]
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"
#eventually clean all these up as well
#indexing_slicing = "deny"

[workspace.dependencies]
kuadrant-filter = { path = "crates/kuadrant-filter" }
proxy-wasm = { git = "https://github.com/Kuadrant/proxy-wasm-rust-sdk.git", rev = "6ceedbb" }
proxy-wasm-test-framework = { git = "https://github.com/Kuadrant/wasm-test-framework.git", rev = "33b318b" }
serde_json = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
prost = "0.14"
prost-types = "0.14"
prost-build = "0.14"
prost-reflect = { version = "0.16", features = ["serde"] }
radix_trie = "0.2.1"
const_format = "0.2.31"
chrono = { version = "0.4.38", default-features = false, features = ["alloc", "std"] }
cel = { git = "https://github.com/cel-rust/cel-rust.git", features = ["structs"], rev = "d23d0a7" }
urlencoding = "2.1.3"
lazy_static = "1.5.0"
nom = { version = "8", default-features = false }
uuid = { version = "1.18.1", features = ["v4", "js"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry_sdk = "0.31"
opentelemetry-proto = { version = "0.31", default-features = false, features = ["gen-tonic-messages", "trace"] }
acutejson = "0.1.0"
serial_test = "2.0.0"
