[package]
name = "kuadrant-filter"
version = "0.13.0-dev"
edition = "2021"
description = "Core filtering logic for Kuadrant's proxy integration"
license = "Apache-2.0"

[dependencies]
serde_json.workspace = true
log.workspace = true
serde.workspace = true
prost.workspace = true
prost-types.workspace = true
prost-reflect.workspace = true
radix_trie.workspace = true
chrono.workspace = true
cel.workspace = true
urlencoding.workspace = true
lazy_static.workspace = true
nom.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-proto.workspace = true
acutejson.workspace = true

[build-dependencies]
prost-build.workspace = true

[lints]
workspace = true
